--- a/contacto.css
+++ b/contacto.css
@@ -45,7 +45,7 @@
 } 
 
 .contact h3{
-    color: rgb(4, 19, 91);
+    color: #091F68;
     font-weight: 500;
     font-size: 1.4em;
     margin-bottom: 10px;
@@ -71,7 +71,7 @@
 }
 
 .inputBox span{
-    color: rgb(4, 4, 66);
+    color: #091F68;
     margin-top: 10px;
     margin-bottom: 5px;
     font-weight: 700;
@@ -81,13 +81,13 @@
     padding: 10px;
     font-size: 1.1em;
     outline: none;
-    border: 1px solid rgb(9, 186, 35);
+    border: 1px solid #76EE1E;
 }
  textarea{
     padding: 10px;
     font-size: 1.1em;
     outline: none;
-    border: 1px solid rgb(9, 186, 35) ;
+    border: 1px solid #76EE1E ;
     resize: none;
     min-height: 40px;
     margin-bottom: -10px;
@@ -95,11 +95,11 @@
     margin-top: 10px;
 }
 label{
-    color: rgb(4, 4, 66);
+    color:#091F68;
     font-weight: 700;
 }
 .btnc{
-    background-color: rgb(26, 165, 14);
+    background-color: #76EE1E;
     border: none;
     font-size: 1.1em;
     max-width: 120px;
@@ -110,14 +110,14 @@ label{
 
 }
 .btnc:hover{
-    background-color: #0c055c;
+    background-color:#091F68;
 }
 .inputBox ::placeholder{
     color: #999;
 }
    
 .info{
-    background-color: #0c055c;
+    background-color: #091F68;
 }
 .info h3{
     color: white;
@@ -132,7 +132,7 @@ label{
     min-width: 40px;
     height: 40px;
     color: white;
-    background-color: rgb(51, 227, 42);
+    background-color: #76EE1E;
     display: flex;
     justify-content: center;
     align-items: center;
