--- a/general.css
+++ b/general.css
@@ -5,6 +5,11 @@
     font-family: "Nunito", sans-serif;
     font-size: 20px;
 }
+body{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
 
 .header {
     display: flex;
@@ -79,6 +84,7 @@
     grid-template-columns: repeat(3,1fr);
     grid-gap:50px;
     padding: 45px 0px;
+    
 }
 .pie-pagina .grupo-1 .box figure{
     width: 100%;
